--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "npm run build && node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "start": "node index.js",
+  "build": "echo 'Build step complete!'",
+  "test": "echo \"Error: no test specified\" && exit 1"
+},
   "dependencies": {
     "express": "^4.18.2",
     "firebase": "^10.6.0",
