--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "firebase": "^10.6.0",
     "firebase-admin": "^13.2.0",
     "serverless-http": "^3.0.0",
-    "ws": "^8.15.0"
+    "ws": "^8.15.0",
+    "dotenv": "^16.0.3"
   }
 }
